# lyceris

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
examples/: with_emitter.rs  with_modloader.rs
locales/: en.yml  tr.yml
src/: error.rs  lib.rs  prelude.rs  reporter.rs
src/auth/: microsoft.rs  mod.rs
src/frpc/: mod.rs
src/http/: downloader.rs  error.rs  fetch.rs  mod.rs
src/json/: java.rs  mod.rs
src/json/version/: asset_index.rs  manifest.rs  mod.rs
src/json/version/meta/: custom.rs  mod.rs  vanilla.rs
src/macros/: emit.rs
src/minecraft/: config.rs  emitter.rs  error.rs  install.rs  launch.rs  mod.rs  parse.rs  serde.rs  version.rs
src/minecraft/auth/: mod.rs  online.rs
src/minecraft/custom/: mod.rs
src/minecraft/custom/fabric/: json.rs  mod.rs  serde.rs
src/minecraft/custom/forge/: args.rs  json.rs  mod.rs
src/minecraft/custom/optifine/: json.rs  mod.rs
src/minecraft/custom/quilt/: mod.rs  serde.rs
src/minecraft/downloader/: mod.rs
src/minecraft/java/: mod.rs  serde.rs
src/minecraft/loader/: fabric.rs  forge.rs  mod.rs  quilt.rs
src/minecraft/loaders/: fabric.rs  mod.rs  quilt.rs
src/network/: mod.rs
src/util/: base64.rs  error.rs  extract.rs  hash.rs  json.rs  mod.rs  retry.rs
src/utils/: mod.rs
