[package]
name = "cardinal_core"
version = "0.1.0"
edition = "2021"
include = ["/tests/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
async-trait = "0.1.77"
directories = "5.0.1"
futures-util = "0.3.30"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["stream", "json"] }
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
sha1 = "0.10.6"
zip = "0.5.11"
thiserror = "1.0.56"
rayon = "1.5.3"
tokio = { version = "1.35.1", features = ["full"] }
sha256 = "1.0.3"