[package]
name = "lyceris"
version = "0.3.1"
edition = "2021"
description = "An open source Minecraft launcher library."
license = "MIT OR Apache-2.0"
authors = ["Batuhan Aksoy"]
keywords = [
    "minecraft",
    "launcher",
    "library",
    "game",
    "java",
]
repository = "https://github.com/BatuhanAksoyy/lyceris"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
base64 = "0.22.1"
event-emitter-rs = "0.1.4"
futures = "0.3.31"
oauth2 = "4.4.2"
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
zip = "2.2.1"
